--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.walker</groupId>
     <artifactId>mybatis-paginator</artifactId>
-    <version>20150827</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -33,8 +33,10 @@
     </dependencies>
 
     <build>
-        <finalName>mybatis-paginator</finalName>
+
         <!--
+        finalName>mybatis-paginator</finalName>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
