--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,9 @@
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-api</artifactId>
             <version>1.7.8</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- mybatis/orm  系列-->
@@ -38,6 +39,7 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.2.7</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
