--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.2.2</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
