修改 from中为tab符造成的bug

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.8</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
