--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
         <snapshotRepository>
             <id>public</id>
             <name>public</name>
-            <url>http://dev.mucfc.com/nexus/content/repositories/snapshots/</url>
+            <url>http://dev.x.com/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>releases</id>
             <name>Releases</name>
-            <url>http://dev.mucfc.com/nexus/content/repositories/releases/</url>
+            <url>http://dev.x.com/nexus/content/repositories/releases/</url>
         </repository>
     </distributionManagement>
 
